# smartleftovers-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.json  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
app/: _layout.tsx  login.tsx  signUp.tsx
app/(tabs)/: CameraScreen.tsx  ChatScreen.tsx  SettingsScreen.tsx  _layout.tsx  index.tsx
backend/: .dockerignore  .env.example  Dockerfile  database.py  food_item.py  main.py  model.py  pyproject.toml
components/: AuthChecker.tsx  CameraCapture.tsx
config/: firebaseConfig.tsx
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: _layout.tsx  login.tsx  signUp.tsx
frontend/app/(tabs)/: ChatScreen.tsx  NotificationsScreen.tsx  SettingsScreen.tsx  _layout.tsx  index.tsx
frontend/components/: CameraCapture.tsx  haptic-tab.tsx
frontend/components/home/: CameraFoodModal.tsx  FilterModal.tsx  FoodCard.tsx  FoodFormModal.tsx  HomeActionButtons.tsx  ImagePreviewModal.tsx  IngredientPickerModal.tsx  types.tsx
frontend/components/styles/: ChatScreen.styles.tsx  NotificationsScreen.styles.tsx  SettingsScreen.styles.tsx  index.styles.tsx  login.styles.tsx  signUp.styles.tsx
frontend/components/ui/: icon-symbol.ios.tsx  icon-symbol.tsx
frontend/config/: firebaseConfig.tsx
frontend/lib/: analyzeImageWithGemini.tsx  api.tsx  chatWithGemini.tsx  imageStorage.tsx  notificationSettings.tsx  userFriendlyError.tsx  webAuthSession.tsx
lib/: analyzeImageWithGemini.tsx  chatWithGemini.tsx
